<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".modul.register.RegisterActivity">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingStart="12dp"
            android:paddingEnd="5dp"
            android:background="@color/white"
            android:src="@drawable/icon_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titlePage"
            android:layout_toEndOf="@+id/backButton"
            style="@style/customTextViewBold18Sp"
            android:textStyle="normal"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/register_page"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/titleUserName"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/layoutTop" />

    <EditText
        android:id="@+id/userName"
        style="@style/customEditText"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        android:layout_below="@+id/titleUserName"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUserName"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/errorUsername"
        style="@style/customTextViewError"
        android:text="@string/error_email"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/titleUserName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/titlePassword"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/errorUsername" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColorHint="@null"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePassword"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customEditText"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/errorPassword"
        style="@style/customTextViewError"
        android:text="@string/error_password"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <TextView
        android:id="@+id/titleConfirmPassword"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/titlePassword"
        app:layout_constraintTop_toBottomOf="@+id/errorPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@null"
        app:hintEnabled="false"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleConfirmPassword"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customEditText"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:singleLine="true"
            android:maxLength="20"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorConfirmPassword"
        style="@style/customTextViewError"
        android:text="@string/error_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout" />

    <TextView
        android:id="@+id/titleAge"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/errorConfirmPassword" />

    <EditText
        android:id="@+id/age"
        style="@style/customEditText"
        android:layout_marginTop="5dp"
        android:layout_width="75dp"
        android:layout_below="@+id/titleUserName"
        android:hint="@string/age"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAge"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/errorAge"
        style="@style/customTextViewError"
        android:text="@string/error_age"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/age" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        style="@style/customButton"
        android:background="@drawable/background_button_purple"
        android:text="@string/register"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:visibility="gone"
        android:indeterminateTint="@color/orangeEE6044"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>