<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".modul.login.LoginActivity">


    <TextView
        android:id="@+id/titlePage"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/login_page"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/titleUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleUserName"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        style="@style/customEditText"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/titleUserName"
        android:drawableStart="@drawable/icon_email_svgrepo"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUserName"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/titlePassword"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColorHint="@null"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePassword"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customEditText"
            android:drawableStart="@drawable/icon_password_svgrepo"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="20"
            android:textSize="18sp"
            tools:ignore="Autofill,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/viewData"
        style="@style/customTextViewBold18Sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/view_data"
        android:drawablePadding="10dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        app:drawableEndCompat="@drawable/ic_arrow_next" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/customButton"
        android:background="@drawable/background_button_purple"
        android:text="@string/login"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        style="@style/customButton"
        android:textColor="@color/purple5843BE"
        android:background="@drawable/background_button_boarder_purple"
        android:text="@string/register"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:visibility="gone"
        android:indeterminateTint="@color/orangeEE6044"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>